style.css
body {
  font-size: 24px;
}

h2 {
  margin: 0;
}

.start-page,
.list-page {
  background-color: rgb(46, 46, 46);
  height: 100vh;
}

.start-page__title {
  color: aliceblue;
  font-size: 24px;
  flex-grow: 1;
}

.lists-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.list-field__list,
.lists-container__add-button,
.list-page__button-add-item,
.list-item,
.lists-container__input,
.list-page__input {
  font-size: 24px;
  padding: 8px;
  background-color: rgb(156, 120, 76);
  border: 1px solid rgb(156, 120, 76);
  color: aliceblue;
  cursor: pointer;
  min-height: 30px;
}

.list-page__button-add-item {
  border-top: none;
}

.list-item {
  display: flex;
  border: none;
  border-bottom: 1px solid rgb(156, 120, 76);
  align-items: center;
  min-height: 30px;
}

.lists-container__input,
.list-page__input,
.list-field__list {
  width: 100%;
}

.lists-container__add-button,
.list-page__button-add-item,
.list-item {
  background-color: transparent;
}

.lists-container__input-field,
.list-field {
  display: flex;
  gap: 4px;
}

.lists-container__button-done,
.lists-container__button-cancel,
.list-field__button-delete {
  border: 1px solid rgb(156, 120, 76);
  width: 52px;
  height: 52px;
  flex-shrink: 0;
}

.lists-container__button-done {
  background: transparent url("images/button-done.png") no-repeat center
    center / cover;
}

.lists-container__button-cancel {
  background: transparent url("images/button-cancel.png") no-repeat center
    center / cover;
}

.list-field__button-delete {
  background: transparent url("images/button-bin.png") no-repeat center center /
    cover;
}

.disabled,
.list-item--completed {
  opacity: 0.6;
  cursor: not-allowed;
  background-color: #ccc;
  color: #666;
  pointer-events: none;
}

.list-item--completed {
  pointer-events: all;
  text-decoration: line-through;
}

.list-page__title-field,
.start-page__title-container {
  display: flex;
  gap: 4px;
  justify-content: center;
  align-items: center;
  padding: 8px;
}

.list-page__title-field {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: rgb(46, 46, 46);
}

.list-page__title {
  width: 100%;
  font-size: 32px;
  color: aliceblue;
}

.list-page__button-edit,
.list-page__button-more,
.list-page__button-back,
.list-page__button-done,
.start-page__button-more {
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  border: none;
}

.list-page__button-back {
  background: transparent url("images/button-back.png") no-repeat center
    center / cover;
  margin-right: 10px;
}

.list-page__button-edit {
  background: transparent url("images/button-edit.png") no-repeat center
    center / cover;
}

.list-page__button-more,
.start-page__button-more {
  background: transparent url("images/button-more.png") no-repeat center
    center / cover;
}

.list-page__button-done {
  background: transparent url("images/button-done.png") no-repeat center
    center / cover;
}

.list-item__button-delete {
  display: none;
  width: 30px;
  height: 30px;
  background: transparent url("images/button-cancel.png") no-repeat center
    center / cover;
  border: none;
  margin-left: auto;
}

.hidden {
  display: none;
}

.backdrop {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 20px;
  background-color: rgba(0, 0, 0, 0.6);
}

.more-button-backdrop {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: transparent;
}

.modal {
  position: relative;
  background-color: rgb(115, 115, 115);
  border-radius: 16px;
  padding: 40px;
}

.more-modal {
  min-width: 160px;
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: rgb(46, 46, 46);
  box-shadow:
    0 2px 4px rgba(0, 0, 0, 0.8),
    0 10px 20px rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  gap: 8px;
  list-style-type: none;
  padding: 8px;
  margin: 0;
}

.more-modal__option {
  font-size: 24px;
  color: aliceblue;
}

.more-modal__input {
  display: none;
}

.modal__title {
  color: aliceblue;
  font-size: 20px;
}

.modal__input {
  font-size: 16px;
  width: 100%;
  background-color: transparent;
  border: none;
  border-bottom: 1px solid rgb(40, 210, 202);
  margin-bottom: 8px;
}

.modal__buttons-container {
  display: flex;
  justify-content: space-between;
}

.modal__button-next,
.modal__button-cancel,
.modal__button-ok,
.modal__button-delete {
  padding: 4px;
  border: none;
  background-color: transparent;
  color: rgb(40, 210, 202);
  font-size: 16px;
}

.list-page__container {
  background-color: black;
  display: flex;
  flex-direction: column;
  gap: 4px;
  margin-top: 56px;
}

body.edit-mode .list-page__container {
  margin-top: 64px;
}

.list-page__items {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.edit-mode .list-item__button-delete {
  display: block;
}

